--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "format": "prettier --write .",
     "dev": "next dev --turbopack",
