--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "format": "prettier --write .",
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H localhost -p 3000",
     "lint": "next lint",
     "prepare": "husky"
   },
