--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
@@ -23,6 +26,7 @@
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.542.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
@@ -38,6 +42,7 @@
     "@eslint/js": "^9.39.1",
     "@next/eslint-plugin-next": "^16.0.1",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
